update react live and mdx for docs

--- a/docs/mds/3.componentApi.md
+++ b/docs/mds/3.componentApi.md
@@ -6,7 +6,7 @@ title: React Popup | Component API
 description: The reactjs-popup API is inspired by semantic popup docs
 ---
 
-import InputFocus from '../../../src/examples/InputFocus.js'
+import InputFocus from '../src/examples/InputFocus.js'
 
 ### Component API
 
@@ -157,8 +157,7 @@ html selector, class name or id element that the tooltip must be inside (default
 
 ### Example : on focus
 
-```jsx
-/* react-live */
+```jsx live=true
 const PopupOnFocus = () => (
   <Popup
     trigger={<input type="text" placeholder="start typing ... " />}
