--- a/docs/mds/5.tooltipExamples.md
+++ b/docs/mds/5.tooltipExamples.md
@@ -8,8 +8,8 @@ redirects:
   - "use case - Tooltip"
 ---
 
-import SimpleTooltip from '../../../src/examples/SimpleTooltip.js'
-import ToolTipPositions from '../../../src/examples/ToolTipPositions.js'
+import SimpleTooltip from '../src/examples/SimpleTooltip.js'
+import ToolTipPositions from '../src/examples/ToolTipPositions.js'
 
 ## React Tooltip
 
